[gd_scene load_steps=4 format=3 uid="uid://m8ko8bb2bgly"]

[ext_resource type="Script" path="res://Instances/UI/OptionUpgradeCard/OptionUpgradeCard.gd" id="1_0utxi"]
[ext_resource type="Texture2D" uid="uid://da8g5f35coqxu" path="res://Instances/Resources/Upgrades/Bullet/Damage/sprite_icons015.png" id="1_gbqlu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27sk1"]
bg_color = Color(0.796078, 0.45098, 0.2, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="OptionUpgradeCard" type="Button" groups=["Card"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.5
offset_top = -159.0
offset_right = 112.5
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_27sk1")
theme_override_styles/hover = SubResource("StyleBoxFlat_27sk1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_27sk1")
theme_override_styles/disabled = SubResource("StyleBoxFlat_27sk1")
theme_override_styles/focus = SubResource("StyleBoxFlat_27sk1")
script = ExtResource("1_0utxi")

[node name="iconPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(90, 90)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 43.0
offset_right = 45.0
offset_bottom = 133.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1
theme_type_variation = &"PanelIconQuad"

[node name="MarginContainer" type="MarginContainer" parent="iconPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="bdIcon" type="ColorRect" parent="iconPanel/MarginContainer"]
show_behind_parent = true
layout_mode = 2
color = Color(0.894118, 0.65098, 0.447059, 1)

[node name="Icon" type="TextureRect" parent="iconPanel/MarginContainer"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 2
texture = ExtResource("1_gbqlu")

[node name="Title" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -13.5
offset_right = 32.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "NOME"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -130.0
offset_right = -10.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0

[node name="LabelPro" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Decrease reload time by #%"
autowrap_mode = 3

[node name="LabelContra" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.796078, 0.184314, 0.172549, 1)
theme_override_font_sizes/font_size = 16
autowrap_mode = 3
